--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Workspace03/Design01.cydsn/BUILD.log
 Workspace03/Design01.cydsn/CLEAN.log
 Workspace03/Design01.cydsn/REBUILD.log
 *.zip
+Workspace03.rar
